--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^3.28.2",
+    "react-loader-spinner": "^3.1.5",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1"
   },
